trunk/Archive2/96/bb5b1c72c02119/output
main.cpp:15:12: error: use of undeclared identifier 'max'
    return max(rand(), rand(), rand());
           ^
1 error generated.
